update book by id implementation
